projetos/local/athena/athena-webapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: athena-webapp
  labels:
    app: athena-webapp
    environment: local
    stack: athena
