projetos/local/athena/athena-webapp/patch-api-url.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athena-webapp-deployment
spec:
  template:
    spec:
      containers:
      - name: athena-webapp-container
