projetos/local/athena/athena-webapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: athena-webapp-route
  namespace: athena-webapp
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - athena.tech.nexusplatform.com.br
  rules:
  - backendRefs:
    - name: athena-webapp-service
      port: 80
